--- a/progress-step/index.html
+++ b/progress-step/index.html
@@ -18,8 +18,8 @@
       <div class="circle">4</div>
     </div>
 
-    <div class="button btn" id="prev" disabled>Prev</div>
-    <div class="button btn" id="prev">Next</div>
+    <button class="button btn" id="prev" disabled>Prev</button>
+    <button class="button btn" id="prev">Next</button>
   </div>
   <script src="script.js"></script>
 </body>
