--- a/progress-step/index.html
+++ b/progress-step/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <button class="button btn" id="prev" disabled>Prev</button>
-    <button class="button btn" id="prev">Next</button>
+    <button class="button btn" id="next">Next</button>
   </div>
   <script src="script.js"></script>
 </body>
