--- a/project-new/index.html
+++ b/project-new/index.html
@@ -3,9 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Rotating Navigation</title>
 </head>
 <body>
-  
+  <div class="container show-nav">
+    <div class="circle-container">
+      <div class="circle">
+        <button id="close">
+          <i class="fas fa-times">
+            X
+          </i>
+        </button>
+        <button class="open">
+          <i class="fas fa-bars">
+            R
+          </i>
+        </button>
+      </div>
+    </div>
+
+    <div class="content">
+      <h1>Amazing Article</h1>
+      <small>Florin Pop</small>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat repellendus corporis ex aspernatur enim eum modi harum odio doloremque ab numquam optio laborum officia unde, sunt id fugiat atque culpa, et dolore? Reprehenderit culpa numquam non maxime ut harum nemo facere quisquam excepturi vel, placeat recusandae provident tempore consequuntur molestias aperiam nam at quibusdam consectetur saepe, porro ipsum ab. Voluptatem, sed vitae architecto ex iure aut odit reprehenderit iste quos. Facilis recusandae quod, unde voluptatem officiis excepturi eos a! Quas eos ex, quibusdam officia eligendi earum porro eveniet! Repellendus tempore officiis quibusdam, porro saepe blanditiis soluta unde perspiciatis voluptate fuga!</p>
+      <h3>My Dog</h3>
+      <img src="https://images.unsplash.com/photo-1541599540903-216a46ca1dc0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="doggy"/>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere voluptate nobis, tempora non earum, ad eum error sed aut debitis officiis corporis ipsum perferendis libero dolor reiciendis. Nostrum fugiat alias reprehenderit consequatur laboriosam quidem expedita quod officia tenetur est labore, veniam soluta aliquam, quisquam voluptas amet natus. Consectetur, iusto saepe quos voluptate aperiam quo est ut deleniti praesentium, recusandae, magnam quia! Sunt iste dicta et sint voluptatem distinctio? Vel atque cumque expedita necessitatibus autem quasi?</p>
+    </div>
+  </div>
+
+  <nav>
+    <ul>
+      <li class="fas fa-home">Home</li>
+      <li class="fas fa-user-alt">About</li>
+      <li class="fas fa-envelope">Contact</li>
+    </ul>
+  </nav>
 </body>
 </html>
