--- a/project-new/index.html
+++ b/project-new/index.html
@@ -15,7 +15,7 @@
             X
           </i>
         </button>
-        <button class="open">
+        <button id="open">
           <i class="fas fa-bars">
             R
           </i>
