--- a/project-new/index.html
+++ b/project-new/index.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css">
   <title>Rotating Navigation</title>
 </head>
 <body>
-  <div class="container show-nav">
+  <div class="container">
     <div class="circle-container">
       <div class="circle">
         <button id="close">
-          <i class="fas fa-times">
-            X
-          </i>
+          <i class="fas fa-times"></i>
         </button>
         <button id="open">
-          <i class="fas fa-bars">
-            R
-          </i>
+          <i class="fas fa-bars"></i>
         </button>
       </div>
     </div>
@@ -35,10 +32,11 @@
 
   <nav>
     <ul>
-      <li class="fas fa-home">Home</li>
-      <li class="fas fa-user-alt">About</li>
-      <li class="fas fa-envelope">Contact</li>
+      <li><i class="fas fa-home"></i>Home</li>
+      <li><i class="fas fa-user-alt"></i>About</li>
+      <li><i class="fas fa-envelope"></i>Contact</li>
     </ul>
   </nav>
+  <script src="script.js"></script>
 </body>
 </html>
