--- a/Scroll-Animation/index.html
+++ b/Scroll-Animation/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css"
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Scroll Animation</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <h1>Scroll to see the animation</h1>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+  <div class="box"><h1>Content</h1></div>
+    <script src="script.js"></script>
 </body>
 </html>
